2009-01-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1734 to r1752).

	Note: this merge doesn't include the following revisions because it
	was made by previous commits:
	    r1737, r1740, r1745, r1747, r1748.

	* src/jlib.hrl: Any deprecated content was removed from jlib.hrl. This
	leaves only the new RSM records.

2009-01-15  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_muc/mod_muc.erl, src/mod_muc/mod_muc_room.erl: 
	Store registered nicknames, rooms and domains as binary().
	Use document_to_iolist/1 and iolist_size/1 instead of 
	document_to_list/1.

2009-01-11  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix typo, initial update
	to new hooks API (using binaries). mod_pubsub is still
	unusable with exmpp.

	* src/mod_caps.erl, src/ejabberd_c2s.erl: Apply commit
	1212 (caps handling fix), was incorrectly overwritten on 
	1770.

2009-01-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix owners cache and fix unsubscribe
	permissions (thanks to Andy Skelton)(EJAB-840)
	* src/mod_pubsub/node_default.erl: Likewise

2009-01-10  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_vcard_odbc.erl: Fix bug in user search.

	* src/mod_vcard_ldap.erl, src/mod_vcard.erl, src/mod_configure.erl,
	src/ejabberd_sm.erl, src/mod_privacy_odbc.erl, src/ejabberd_c2s.erl,
	src/ejabberd_local.erl, src/mod_privacy.erl, src/mod_adhoc.erl,
	src/mod_pubsub/mod_pubsub.erl, src/mod_vcard_odbc.erl,
	src/mod_stats.erl, src/mod_last.erl, src/mod_private.erl,
	src/mod_roster.erl, src/mod_disco.erl, src/mod_private_odbc.erl,
	src/mod_configure2.erl, src/mod_roster_odbc.erl, src/mod_register.erl,
	src/mod_version.erl, src/mod_caps.erl, src/mod_last_odbc.erl,
	src/mod_time.erl: Update gen_iq_handler API, require the 'Host'
	argument to be in binary() format.

2009-01-10  Christophe Romain <christophe.romain@process-one.net>
